Fri Oct 10 10:36:01 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/Metrics.dsp: Fixed build errors in MSVC release
	  builds. The release configuration did not have the right include
	  paths.

Fri Oct 10 09:48:05 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/Kokyu_dsrt_schedulers/fp_example/fp_client.dsp: 
	* examples/Kokyu_dsrt_schedulers/fp_example/fp_server.dsp: 
	* examples/Kokyu_dsrt_schedulers/mif_example/mif_server.dsp: 
	* examples/Kokyu_dsrt_schedulers/mif_example/mif_client.dsp: 
	* examples/Kokyu_dsrt_schedulers/muf_example/muf_server.dsp: 
	* examples/Kokyu_dsrt_schedulers/muf_example/muf_client.dsp: 
	  Fixed path to the idl compiler to clear MSVC Release build 
	  errors. 

Fri Oct 10 09:17:42 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/tests/LoadBalancing/GenericFactory/Infrastructure_Controlled/server.dsp:
	  Recreated this file to fix build errors (Error: no project
	  loaded) in MSVC6.

Fri Oct 10 12:31:53 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FaultTolerance.bor
          No .i files are anymore available in the FaultTolerance
          directory, only .inl files, so updated the INCLUDES part
          of this makefile.

Fri Oct 10 06:18:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FT_ORB.bor:
          No .i files are anymore available in the FaultTolerance
          directory, only .inl files, so updated the INCLUDES part
          of this makefile.

Thu Oct 09 23:15:52 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>

        * orbsvcs/orbsvcs/FTORB.mpc
          Fixed the sharename in FT_ServerORB project

Thu Oct 09 20:33:24 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>

        * orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/Makefile
        * orbsvcs/tests/FaultTolerance/IOGR/Makefile
        * orbsvcs/tests/FaultTolerance/IOGRManipulation/Makefile
          updated dependancies for above Makefiles
