@@ -1,3 +1,11 @@
+Fri Oct 10 10:46:51 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
+
+	* orbsvcs/Event_Service/Event_Service.h: 
+	* orbsvcs/Event_Service/Event_Service.cpp: Changed some
+	  enumeration definitions (SCHED_xx to ES_SCHED_xx to get rid of
+	  compiler errors in AIX. Thanks to Werner Buchert
+	  <w.buchert@medat.de> for pointing this out.
+	
 Fri Oct 10 10:36:01 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
 
 	* orbsvcs/orbsvcs/Metrics.dsp: Fixed build errors in MSVC release
